[package]
name = "atom-motion-balance"
version = "0.1.0"
authors = ["Satoshi Tanaka <overthere555@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
mpu6050 = { git = "https://github.com/tana/mpu6050", branch = "mpu6886" }
shared-bus = "0.2.5"
embedded-hal = "0.2.7"
nalgebra = { version = "0.31.4", default-features = false }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
